[package]
name = "price-punchout"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version="1.0" }
clap = { version="3.2.20", features=["derive"] }
image = { version="0.24.5" }
rand = { version="0.8.5", features=["std_rng"] }
reqwest = { version="0.11.11", default-features = false, features = ["rustls-tls-native-roots"] }
rusqlite = { version="0.28.0", features = ["bundled"] }
serde_json = { version="1.0" }
sha2 = { version="0.10.6" }
tokio = { version="1.20.1", features=["full"] }